Fixed alignment in grid books

--- a/book-manager/src/App.css
+++ b/book-manager/src/App.css
@@ -104,6 +104,7 @@
   height: 380px;
   overflow: hidden;
   max-width: 250px;
+  min-width: 250px;
   flex-grow: 1;
 }
 .topBook:hover {
@@ -137,7 +138,7 @@
   background-color: #282c34;
 }
 
-.gridBook > p
+.gridBook > div
 {
   position: absolute;
   z-index: 2;
@@ -151,6 +152,7 @@
 {
   opacity: 0.5;
 }
+
 .openNav
 {
   z-index: 4;
